INTYGFV-14126: Fixed some code warnings to improve the code.